syntax = "proto3";
option go_package = ".";

service PriceProvider{
  rpc GetCurrentPrices(GetPricesRequest) returns(GetPricesResponse);
}

message GetPricesRequest{
  repeated string Names = 1;
}

message GetPricesResponse{
  map<string, Price> prices  = 1;
}

message Price{
  string Name = 1;
  double SellingPrice = 2;
  double PurchasePrice = 3;
}